2009-05-11  Janus Weil  <janus@gcc.gnu.org>

PR fortran/40089
	* resolve.c (resolve_fl_derived): Only return FAILURE if
	gfc_notify_std fails.


2009-05-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/40089
	* gfortran.dg/proc_ptr_comp_7.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147379 138bc75d-0d04-0410-961f-82ee72b054a4